examples/test/testpolicy2913.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2913
  namespace: namespace212
spec:
  podSelector:
    matchLabels:
      key38: value9
      key11: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value48
          key42: value38
          key4: value7
      podSelector:
        matchLabels:
          key28: value31
